--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,10 @@ wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
-wp-content/plugins
+wp-content/plugins/
 
 /.htaccess
 /license.txt
 /readme.html
 /sitemap.xml
 /sitemap.xml.gz
-
-wp-content/plugins
